# scimcp

./: General_tools.py  README.md  client.py  evaluate.py  extract_per_trace_stats.py  fix_range_answers.py  pyproject.toml  server.py
MCP/: client.py  server.py
Tool_processing/: Relevant_tools.py
Tools/: General_tools.py  Mat_Sci_tools.py  Material_Project_search_tool_mapping.py  Material_Project_tool.py  ar5iv_arxiv_search.py
batch_tests/: batch_test_gpt5mini.py  batch_test_phi4.py  batch_test_phi4mini.py
data/dev-examples/: dev_examples_with_gold_labels.jsonl  devset2_examples_with_gold_labels.jsonl
data/honeycomb_data/mascqa/: all_questions.xlsx  mascqa-eval-with_answer.json  source.txt
data/honeycomb_data/sciq/: inspect_sciq.ipynb  sciq.parquet
data/problem_sets/dev_problems/chgnet/: chgnet-gold-standards.jsonl  chgnet-problems.jsonl
data/problem_sets/dev_problems/devset/: devset-gold-standards.jsonl  devset-problems.jsonl
data/problem_sets/dev_problems/gtri/: gtri-gold-standards.jsonl  gtri-problems.jsonl
data/problem_sets/dev_problems/jhu/: jhu-gold-standards.jsonl  jhu-problems.jsonl
data/problem_sets/dev_problems/pycalphad/: pycalphad-gold-standards.jsonl  pycalphad-problems.jsonl
data/problem_sets/dev_problems/str-dft/: str-dft-gold-standards.jsonl  str-dft-problems.jsonl
data/problem_sets/dev_problems/str-pvskt/: str-pvskt-gold-standards.jsonl  str-pvskt-problems.jsonl
data/problem_sets/dev_problems/str-speculative/: str-speculative-gold-standards.jsonl  str-speculative-problems.jsonl
data/problem_sets/sprint1/drop4/: README.md  (+2 more)
(+26 files in other folders)
