[project]
name = "scimcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"    #Usually its 3.11>
dependencies = [
    "docling>=2.52.0",
    "fastmcp>=2.12.3",
    "huggingface-hub>=0.34.4",
    "langchain>=0.3.27",
    "openai>=1.107.2",
    "smolagents[mcp,toolkit]>=1.21.3",
]
