[project]
name = "scimcp"
version = "0.1.0"
description = "Dependencies for mcp server"
readme = "README.md"
requires-python = ">=3.11,<3.13"    #Usually its 3.11>
dependencies = [
    "arxiv>=2.2.0",
    "arize-phoenix>=8.0.0",
    "docling>=2.52.0",
    "fastmcp>=2.12.3",
    "google-search-results>=2.4.2",
    "huggingface-hub>=0.34.4",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "mp-api>=0.45.11",
    "openai>=1.107.2",
    "pymupdf>=1.26.5",
    "semanticscholar>=0.11.0",
    "smolagents[mcp,telemetry,toolkit]>=1.22.0",
    "wikipedia>=1.4.0",
]
